# translate_english_address_to_chinese

./: .dvcignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  mlruns.dvc  pyproject.toml
.dvc/: config
config/: main.yaml
data/: .gitignore  model_results.dvc  processed.dvc  raw.dvc
docs/: conf.py  index.rst  src.process.rst  src.rst
notebooks/: main.ipynb
report/: main.tex
report/fonts/: README.md
report/src/: fonts.tex  pkg.tex
src/process/: __init__.py  preprocess.py  utils.py
tests/: __init__.py
